--- a/app.json
+++ b/app.json
@@ -1,23 +1,24 @@
 {
-  "name": "ExampleBotName",
-  "description": "Javascript WhatsApp bot made by DINUWH",
+  "name": "DINUWH-MD",
+  "description": "PRABATH-MD has been designed to make things easier and fun while using WhatsApp. 👨‍💻❤️",
   "logo": "https://telegra.ph/file/ad25b2227fa2a1a01b707.jpg",
-  "keywords": ["bot"],
+  "keywords": ["nodejs", "bot", "whatsapp bot", "multi device", "prabath-md"],
   "success_url": "/",
 
   "env": {
-    "SESSION_ID": {
-      "description": "Put the session-id here.",
+    "BOT_NUMBER": {
+      "description": "Put the number here.",
       "required": true
     },  
 
-    "ALIVE_IMG": {
-      "description": "Put your alive img here.",
-      "required": true
-    },
-    
-    "ALIVE_MSG": {
-      "description": "Put your alive msg here.",
+    "SESSION_ID": {
+      "description": "Put the session-id here.",
+      "required": false
+    },  
+
+
+    "GITHUB_AUTH_TOKEN": {
+      "description": "Put your github authtoken here.",
       "required": true
     }   
 },
@@ -28,4 +29,6 @@
         }
      ],
   "stack": "heroku-24"
+  
+  
 }
